--- a/index.html
+++ b/index.html
@@ -4,34 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Link to the Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
     <div id="heading">
+        <!-- Heading section -->
         <h1>Stopwatch</h1>
     </div>
-    <main>
-        <div class="container">
-            <div class="display"></div>
-            <div class="timer-box">
-                <input type="number" class="timer" id="minutes"  placeholder="00">:
-                <input type="number" class="timer" id="seconds" placeholder="00">
+    <main class="container">
+        <!-- Main content container -->
+        <div class="clock-box">
+            <!-- Clock box container -->
+            <div class="display">
+                <!-- Display for timer -->
+                <div class="timer-box">
+                    <!-- Timer input box -->
+                    <input type="number" class="timer" id="minutes" placeholder="00">
+                    <h1>:</h1>
+                    <input type="number" class="timer" id="seconds" placeholder="00">
+                </div>
             </div>
-              
+            <div id="media" style="padding: 30px;">
+                <!-- Media content (image) -->
+                <img id="image" src="images/start.png" alt="">
+            </div>
             <div class="commands">
-                <button id="startButton">Start</button>
-                <button id="stopButton">Stop</button>
-                <button id="resetButton">Reset</button>
-              
+                <!-- Buttons for controlling the stopwatch -->
+                <button id="startButton" class="btn btn-primary">Start</button>
+                <button id="stopButton" class="btn btn-danger">Stop</button>
+                <button id="resetButton" class="btn btn-warning">Reset</button>
             </div>
         </div>
-
     </main>
-
-
-    <script src="script.js"></script>
+    <footer>
+        <!-- Scripts for Bootstrap and custom JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+    </footer>
 </body>
 
 </html>
